#124 improve CLAUDE.md